--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,23 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- iconos -->
+     <!-- Font Awesome -->
+     <link
+     rel="stylesheet"
+     href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+   />
+   <link
+   rel="stylesheet"
+   href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+ />
+
+ <!-- Icons -->
+ <link
+   rel="stylesheet"
+   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
+ />
     <!-- Estilos bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
